--- a/templates/tickets.html
+++ b/templates/tickets.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 {% if request.user.is_authenticated %}
-    wallet - {{ request.user.wallet }}
+    wasted_money - {{ request.user.wasted_money }}
 {% endif %}
 
     <ul>
